--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Aplikasi Saya</title>
+    <title>Sertifikat TKA</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
@@ -48,3 +48,4 @@
 
 </body>
 </html>
+
